:lipstick: Avoid citation button clipping on lit refs

--- a/src/app/details/common/description-overview/description-overview.component.scss
+++ b/src/app/details/common/description-overview/description-overview.component.scss
@@ -8,7 +8,6 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 0;
-  overflow: hidden;
   white-space: nowrap;
   width: 100%;
   gap: 4px
